fix layout bug

--- a/caesar-algorithm/src/assets/main.css
+++ b/caesar-algorithm/src/assets/main.css
@@ -24,6 +24,7 @@ h2 {
 
 #app {
   background-color: var(--black);
+  overflow-y: hidden;
 }
 
 textarea {
